--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,28 @@
 ---
 title: Le Wagon - Middleman
 ---
-
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="container">
+  <%= partial "layouts/banner" %>
+  <div class="row">
+    <div class="col-xs-4">
+      <%= partial "layouts/cards" %>
+    </div>
+    <div class="col-xs-4">
+      <%= partial "layouts/cards" %>
+    </div>
+    <div class="col-xs-4">
+      <%= partial "layouts/cards" %>
+    </div>
+  </div>
+  <div id="home">
+    <div class="home-content">
+      <%= image_tag "logo.png", width: "200" %>
+      <p>
+        Middleman is now running!
+      </p>
+      <p class="about">
+        <%= link_to "More about this template", "about.html" %>
+      </p>
+    </div>
   </div>
 </div>
