--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <%= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Host", "index", class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Meet the team", "team", class: "navbar-wagon-item navbar-wagon-link" %>
@@ -30,9 +30,10 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
+        <li><a href="index">Host</a></li>
         <li><a href="#">Trips</a></li>
         <li><a href="#">Messagese</a></li>
+        <%= link_to "Meet the team", "team", class: "navbar-wagon-item navbar-wagon-link" %>
       </ul>
     </div>
   </div>
