--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -6,7 +6,7 @@ title: Le Wagon - Middleman
   <ul class="list-inline text-center">
     <% ["nicmey", "MateoDDB"].each do |gh_username| %>
       <li>
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{gh_username}", class: "img-circle", style: "width:100px"%>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{gh_username}", class: "img-circle", style: "width:100px; margin: 20px 0px;"%>
         <h3><%= gh_username.capitalize %></h3>
       </li>
     <% end %>
